Update index page to add reference for creator(I am the creator ^_^)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <h1>Simple Quotes Filter</h1>
-        <h2>Madded by Naseem Braika</h2>
+        <h2>Created by
+            <a href="https://www.facebook.com/naseembraika">Naseem Braika</a>
+        </h2>
         <input type="text" id="filter-search" placeholder="Search for quotes...">
     </header>
     <main>
