Update placeholder of input filter of quotes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Created by
             <a href="https://www.facebook.com/naseembraika">Naseem Braika</a>
         </h2>
-        <input type="text" id="filter-search" placeholder="Search for quotes...">
+        <input type="text" id="filter-search" placeholder="Type to filter quotes...">
     </header>
     <main>
         <section id="quotes-container">
